# examples

./: .gitignore
chat_with_sheets/: example.yml  main.py  pyproject.toml  utils.py
js_calendar_agent/: example.yml  package.json  pnpm-lock.yaml  script.js  utils.js
market_research_agent/: example.yml  main.py  pyproject.toml  utils.py
pull_request_review/: example.yml  main.py  pyproject.toml
py_calendar_agent/: example.yml  main.py
reddit_research/: example.yml  package.json  pnpm-lock.yaml  script.js
scheduling_agent/: example.yml  main.py
send_email/: example.yml  package.json  pnpm-lock.yaml  script.js  utils.js
write_code/: example.yml  main.py
